nice anchor positioning

--- a/src/pug/includes/home/home-about-screen.pug
+++ b/src/pug/includes/home/home-about-screen.pug
@@ -1,5 +1,5 @@
-.home-about-screen.g_side_padding.g_v_padding#about
-  .home-about-screen__content
+.home-about-screen.g_side_padding.g_v_padding
+  .home-about-screen__content#about
     .home-about-screen__text
       .text-style-1920-h-1(data-split-lines) Про проєкт
       .text-style-1920-h-2(data-split-lines) простір, де ваші мрії знаходять свій дім, а затишок і комфорт стають частиною повсякденного життя.
