--- a/src/pug/includes/home/home-construction-screen.pug
+++ b/src/pug/includes/home/home-construction-screen.pug
@@ -1,50 +1,51 @@
-.home-construction-screen.g_side_padding.g_v_padding#construction
-  .home-construction-screen__title.text-style-1920-h-1(data-split-lines) Хід робіт
-  .home-construction-screen__subtitle
-    div.home-construction-screen__subtitle-group
-      span Черга 8:
-      span.text-color-body-description Здана в експлуатацію
-    div.home-construction-screen__subtitle-group
-      span Черга 9:
-      span.text-color-body-description ІІ квартал 2025
-      <svg data-build-popup-open width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd" clip-rule="evenodd" d="M4.92431 12.0005C4.92431 7.81659 8.3161 4.4248 12.5 4.4248C16.6839 4.4248 20.0757 7.81659 20.0757 12.0005C20.0757 16.1845 16.6839 19.5762 12.5 19.5762C8.3161 19.5762 4.92431 16.1844 4.92431 12.0005ZM12.5 2.9248C7.48767 2.9248 3.42431 6.98817 3.42431 12.0005C3.42431 17.0128 7.48767 21.0762 12.5 21.0762C17.5123 21.0762 21.5757 17.0129 21.5757 12.0005C21.5757 6.98817 17.5123 2.9248 12.5 2.9248ZM13.9079 16.4884L14.0395 15.9175L14.0395 15.9174C13.9717 15.9513 13.862 15.9905 13.7105 16.0348C13.559 16.0792 13.4234 16.1014 13.3038 16.1014C13.0486 16.1014 12.8691 16.057 12.7655 15.9682C12.6618 15.8795 12.6099 15.7124 12.6099 15.4671C12.6099 15.3698 12.6259 15.226 12.6579 15.0358C12.6897 14.8454 12.7257 14.6763 12.7655 14.5283L13.2559 12.6823C13.3038 12.5132 13.3367 12.3272 13.3546 12.1241C13.3725 11.9211 13.3816 11.7794 13.3816 11.6992C13.3816 11.31 13.253 10.9939 12.9958 10.7508C12.7386 10.5076 12.3728 10.386 11.8982 10.386C11.6351 10.386 11.3559 10.4357 11.0609 10.5351C10.7658 10.6344 10.4568 10.7539 10.1339 10.8935L10.0023 11.4644C10.0979 11.4263 10.2126 11.3861 10.3462 11.3439C10.4797 11.3015 10.6104 11.2805 10.738 11.2805C10.9971 11.2805 11.1725 11.327 11.2643 11.42C11.3559 11.513 11.4019 11.678 11.4019 11.9147C11.4019 12.0459 11.3868 12.1907 11.357 12.3493C11.327 12.5078 11.2901 12.6761 11.2463 12.8536L10.7558 14.7058C10.712 14.9004 10.6802 15.0749 10.6602 15.2291C10.6402 15.3835 10.6302 15.5348 10.6302 15.6827C10.6302 16.0634 10.7629 16.3774 11.028 16.6247C11.2932 16.8722 11.665 16.9959 12.1434 16.9959C12.4545 16.9959 12.7276 16.9525 12.9629 16.8658C13.1981 16.7791 13.5132 16.6534 13.9079 16.4884ZM13.8211 8.99375C14.0505 8.76746 14.1651 8.49358 14.1651 8.17224C14.1651 7.85086 14.0504 7.576 13.8211 7.3476C13.5919 7.11921 13.3158 7.00508 12.9927 7.00508C12.6697 7.00508 12.3927 7.1192 12.1614 7.3476C11.9302 7.57603 11.8145 7.85089 11.8145 8.17224C11.8145 8.49358 11.9302 8.76747 12.1614 8.99375C12.3927 9.22004 12.6698 9.33305 12.9927 9.33305C13.3158 9.33305 13.5919 9.22003 13.8211 8.99375Z" fill="url(#paint0_linear_585_4863)"/>
-        <defs>
-        <linearGradient id="paint0_linear_585_4863" x1="21.5757" y1="2.9248" x2="0.347062" y2="7.87226" gradientUnits="userSpaceOnUse">
-        <stop stop-color="#E0DD00"/>
-        <stop offset="1" stop-color="#7DB928"/>
-        </linearGradient>
-        </defs>
-      </svg>
-  .home-construction-screen__content
-    .construction-card
-      .construction-card__text
-        .construction-card__text-title
-          .text-style-1920-h-1 18
-          .construction-card__title.text-style-1920-h-4 2024 Липень 
-        button(type="button" data-popup-call).construction-card__button
-          span ПЕРЕГЛЯНУТИ
-          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.999986 8.49992L1.49999 8.49992L12.7929 8.49992L7.64643 13.6464L7.29288 13.9999L7.99999 14.707L8.35354 14.3535L14.3535 8.35348L14.7071 7.99992L14.3535 7.64637L8.35354 1.64637L7.99999 1.29282L7.29288 1.99992L7.64643 2.35348L12.7929 7.49992L1.49999 7.49992L0.999986 7.49992L0.999986 8.49992Z" fill="white"/>
-          </svg>
-      .construction-card__img-wrapper
-        .construction-card__img
-          img(src="./assets/images/test.jpg", alt="", srcset="" loading="lazy")
-    .construction-card
-      .construction-card__text
-        .construction-card__text-title
-          .text-style-1920-h-1 18
-          .construction-card__title.text-style-1920-h-4 2025 Червень
-        button(type="button" data-popup-call).construction-card__button
-          span ПЕРЕГЛЯНУТИ
-          <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.999986 8.49992L1.49999 8.49992L12.7929 8.49992L7.64643 13.6464L7.29288 13.9999L7.99999 14.707L8.35354 14.3535L14.3535 8.35348L14.7071 7.99992L14.3535 7.64637L8.35354 1.64637L7.99999 1.29282L7.29288 1.99992L7.64643 2.35348L12.7929 7.49992L1.49999 7.49992L0.999986 7.49992L0.999986 8.49992Z" fill="white"/>
-          </svg>
-      .construction-card__img-wrapper
-        .construction-card__img
-          .construction-card__labels-wrapper
-            .construction-card__label 14 фото
-            .construction-card__label 1 відео
-          img(src="./assets/images/test.jpg", alt="", srcset="" loading="lazy")
-    a(href="/construction").button-main
-      span Дивитись більше звітів
+.home-construction-screen.g_side_padding.g_v_padding
+  div#construction
+    .home-construction-screen__title.text-style-1920-h-1(data-split-lines) Хід робіт
+    .home-construction-screen__subtitle
+      div.home-construction-screen__subtitle-group
+        span Черга 8:
+        span.text-color-body-description Здана в експлуатацію
+      div.home-construction-screen__subtitle-group
+        span Черга 9:
+        span.text-color-body-description ІІ квартал 2025
+        <svg data-build-popup-open width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M4.92431 12.0005C4.92431 7.81659 8.3161 4.4248 12.5 4.4248C16.6839 4.4248 20.0757 7.81659 20.0757 12.0005C20.0757 16.1845 16.6839 19.5762 12.5 19.5762C8.3161 19.5762 4.92431 16.1844 4.92431 12.0005ZM12.5 2.9248C7.48767 2.9248 3.42431 6.98817 3.42431 12.0005C3.42431 17.0128 7.48767 21.0762 12.5 21.0762C17.5123 21.0762 21.5757 17.0129 21.5757 12.0005C21.5757 6.98817 17.5123 2.9248 12.5 2.9248ZM13.9079 16.4884L14.0395 15.9175L14.0395 15.9174C13.9717 15.9513 13.862 15.9905 13.7105 16.0348C13.559 16.0792 13.4234 16.1014 13.3038 16.1014C13.0486 16.1014 12.8691 16.057 12.7655 15.9682C12.6618 15.8795 12.6099 15.7124 12.6099 15.4671C12.6099 15.3698 12.6259 15.226 12.6579 15.0358C12.6897 14.8454 12.7257 14.6763 12.7655 14.5283L13.2559 12.6823C13.3038 12.5132 13.3367 12.3272 13.3546 12.1241C13.3725 11.9211 13.3816 11.7794 13.3816 11.6992C13.3816 11.31 13.253 10.9939 12.9958 10.7508C12.7386 10.5076 12.3728 10.386 11.8982 10.386C11.6351 10.386 11.3559 10.4357 11.0609 10.5351C10.7658 10.6344 10.4568 10.7539 10.1339 10.8935L10.0023 11.4644C10.0979 11.4263 10.2126 11.3861 10.3462 11.3439C10.4797 11.3015 10.6104 11.2805 10.738 11.2805C10.9971 11.2805 11.1725 11.327 11.2643 11.42C11.3559 11.513 11.4019 11.678 11.4019 11.9147C11.4019 12.0459 11.3868 12.1907 11.357 12.3493C11.327 12.5078 11.2901 12.6761 11.2463 12.8536L10.7558 14.7058C10.712 14.9004 10.6802 15.0749 10.6602 15.2291C10.6402 15.3835 10.6302 15.5348 10.6302 15.6827C10.6302 16.0634 10.7629 16.3774 11.028 16.6247C11.2932 16.8722 11.665 16.9959 12.1434 16.9959C12.4545 16.9959 12.7276 16.9525 12.9629 16.8658C13.1981 16.7791 13.5132 16.6534 13.9079 16.4884ZM13.8211 8.99375C14.0505 8.76746 14.1651 8.49358 14.1651 8.17224C14.1651 7.85086 14.0504 7.576 13.8211 7.3476C13.5919 7.11921 13.3158 7.00508 12.9927 7.00508C12.6697 7.00508 12.3927 7.1192 12.1614 7.3476C11.9302 7.57603 11.8145 7.85089 11.8145 8.17224C11.8145 8.49358 11.9302 8.76747 12.1614 8.99375C12.3927 9.22004 12.6698 9.33305 12.9927 9.33305C13.3158 9.33305 13.5919 9.22003 13.8211 8.99375Z" fill="url(#paint0_linear_585_4863)"/>
+          <defs>
+          <linearGradient id="paint0_linear_585_4863" x1="21.5757" y1="2.9248" x2="0.347062" y2="7.87226" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#E0DD00"/>
+          <stop offset="1" stop-color="#7DB928"/>
+          </linearGradient>
+          </defs>
+        </svg>
+    .home-construction-screen__content
+      .construction-card
+        .construction-card__text
+          .construction-card__text-title
+            .text-style-1920-h-1 18
+            .construction-card__title.text-style-1920-h-4 2024 Липень 
+          button(type="button" data-popup-call).construction-card__button
+            span ПЕРЕГЛЯНУТИ
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M0.999986 8.49992L1.49999 8.49992L12.7929 8.49992L7.64643 13.6464L7.29288 13.9999L7.99999 14.707L8.35354 14.3535L14.3535 8.35348L14.7071 7.99992L14.3535 7.64637L8.35354 1.64637L7.99999 1.29282L7.29288 1.99992L7.64643 2.35348L12.7929 7.49992L1.49999 7.49992L0.999986 7.49992L0.999986 8.49992Z" fill="white"/>
+            </svg>
+        .construction-card__img-wrapper
+          .construction-card__img
+            img(src="./assets/images/test.jpg", alt="", srcset="" loading="lazy")
+      .construction-card
+        .construction-card__text
+          .construction-card__text-title
+            .text-style-1920-h-1 18
+            .construction-card__title.text-style-1920-h-4 2025 Червень
+          button(type="button" data-popup-call).construction-card__button
+            span ПЕРЕГЛЯНУТИ
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M0.999986 8.49992L1.49999 8.49992L12.7929 8.49992L7.64643 13.6464L7.29288 13.9999L7.99999 14.707L8.35354 14.3535L14.3535 8.35348L14.7071 7.99992L14.3535 7.64637L8.35354 1.64637L7.99999 1.29282L7.29288 1.99992L7.64643 2.35348L12.7929 7.49992L1.49999 7.49992L0.999986 7.49992L0.999986 8.49992Z" fill="white"/>
+            </svg>
+        .construction-card__img-wrapper
+          .construction-card__img
+            .construction-card__labels-wrapper
+              .construction-card__label 14 фото
+              .construction-card__label 1 відео
+            img(src="./assets/images/test.jpg", alt="", srcset="" loading="lazy")
+      a(href="/construction").button-main
+        span Дивитись більше звітів
