--- a/src/pug/includes/home/home-construction-screen.pug
+++ b/src/pug/includes/home/home-construction-screen.pug
@@ -47,5 +47,6 @@
               .construction-card__label 14 фото
               .construction-card__label 1 відео
             img(src="./assets/images/test.jpg", alt="", srcset="" loading="lazy")
-      a(href="/construction").button-main
-        span Дивитись більше звітів
+      .home-construction-screen__button-wrap
+        a(href="/construction").button-main
+          span Дивитись більше звітів
