--- a/src/assets/styles/layouts/home/home-construction-screen.scss
+++ b/src/assets/styles/layouts/home/home-construction-screen.scss
@@ -70,4 +70,10 @@
         }
         
     }
+    &__button-wrap {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
