--- a/src/pug/includes/home/home-double-screen.pug
+++ b/src/pug/includes/home/home-double-screen.pug
@@ -58,6 +58,15 @@
       div.text-color-body-description За понад 30 років діяльності ми реалізували численні проєкти будівництва та реконструкції в Україні й за кордоном – у Відні, Варшаві й Нюрнберзі. Наразі TVD успішно зводить житлові, офісні та складські приміщення, а також магазини, кафе, ресторани, готелі, заклади освіти, охорони здоров’я й спортивні комплекси.
       div.text-color-body-description Завдяки великому досвіду, сучасним технологіям і власним ресурсам ми забезпечуємо повний цикл будівництва – від проєктування до введення об’єктів в експлуатацію. TVD – це динамічна структура, що об’єднує декілька підприємств у різних сегментах галузі: столярне виробництво, виготовлення металевих виробів, логістику та послуги на ринку оренди будівельної техніки. Такий багатовекторний підхід дає змогу максимально ефективно реалізовувати проєкти різного рівня складності.
       div.text-color-body-description Постійно вдосконалюючи будівельні процеси й інвестуючи в новітні технології, ми залишаємося надійним партнером для тих, хто шукає житло, що відповідає сучасним вимогам. Обираючи нерухомість від TVD, ви обираєте перевірену якість, інноваційний підхід та надійне будівництво, що витримує випробування часом.
+      div.text-style-1920-h-2.text-color-white Реалізовані проекти компанії
+      div.text-color-body-description The company's implemented projects:
+        | • University campus of the Ukrainian Catholic University of the UGCC <br>
+        | • Private school and full-day kindergarten "MriyDiy" <br>
+        | • Ibis Styles Lviv Center Hotel <br>
+      div.text-color-body-description
+        | • Memorial to the Heroes of the Heavenly Hundred <br>
+        | • Hospital "Place of Strength" from the Medical Center of St. Paraskeva <br>
+        | • The largest private maternity hospital in Ukraine "Leleka" in Kyiv <br>
       img(src="./assets/images/home/developer/developer1.png", alt="", srcset="").home-double-screen__developer-image
       a(href="https://tvd.ua/", target="_blank", rel="noopener noreferrer").developer-link
         <svg width="48" height="49" viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
