--- a/src/pug/includes/home/home-double-screen.pug
+++ b/src/pug/includes/home/home-double-screen.pug
@@ -57,20 +57,22 @@
     .home-double-screen__text-wrap
       div.text-color-body-description За понад 30 років діяльності ми реалізували численні проєкти будівництва та реконструкції в Україні й за кордоном – у Відні, Варшаві й Нюрнберзі. Наразі TVD успішно зводить житлові, офісні та складські приміщення, а також магазини, кафе, ресторани, готелі, заклади освіти, охорони здоров’я й спортивні комплекси.
       div.text-color-body-description Завдяки великому досвіду, сучасним технологіям і власним ресурсам ми забезпечуємо повний цикл будівництва – від проєктування до введення об’єктів в експлуатацію. TVD – це динамічна структура, що об’єднує декілька підприємств у різних сегментах галузі: столярне виробництво, виготовлення металевих виробів, логістику та послуги на ринку оренди будівельної техніки. Такий багатовекторний підхід дає змогу максимально ефективно реалізовувати проєкти різного рівня складності.
+      //- div.text-color-body-description
+      //- img(src="./assets/images/home/developer/developer1.png", alt="", srcset="").home-double-screen__developer-image
       div.text-color-body-description Постійно вдосконалюючи будівельні процеси й інвестуючи в новітні технології, ми залишаємося надійним партнером для тих, хто шукає житло, що відповідає сучасним вимогам. Обираючи нерухомість від TVD, ви обираєте перевірену якість, інноваційний підхід та надійне будівництво, що витримує випробування часом.
-      div.text-style-1920-h-2.text-color-white Реалізовані проекти компанії
-      div.text-color-body-description The company's implemented projects:
-        | • University campus of the Ukrainian Catholic University of the UGCC <br>
-        | • Private school and full-day kindergarten "MriyDiy" <br>
-        | • Ibis Styles Lviv Center Hotel <br>
+      div
+        img(src="./assets/images/home/developer/developer2.png", alt="", srcset="").home-double-screen__developer-image
       div.text-color-body-description
-        | • Memorial to the Heroes of the Heavenly Hundred <br>
-        | • Hospital "Place of Strength" from the Medical Center of St. Paraskeva <br>
-        | • The largest private maternity hospital in Ukraine "Leleka" in Kyiv <br>
-      img(src="./assets/images/home/developer/developer1.png", alt="", srcset="").home-double-screen__developer-image
+        .text-style-1920-h-2.text-color-white Реалізовані проекти компанії
+        ul
+          li University campus of the Ukrainian Catholic University of the UGCC <br>
+          li Private school and full-day kindergarten "MriyDiy" <br>
+          li Ibis Styles Lviv Center Hotel <br>
+          li Memorial to the Heroes of the Heavenly Hundred <br>
+          li Hospital "Place of Strength" from the Medical Center of St. Paraskeva <br>
+          li The largest private maternity hospital in Ukraine "Leleka" in Kyiv <br>
       a(href="https://tvd.ua/", target="_blank", rel="noopener noreferrer").developer-link
         <svg width="48" height="49" viewBox="0 0 48 49" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd" d="M29.2279 18.565L17.7071 18.565L17.7071 17.565L30.435 17.565H30.935L30.935 18.065L30.935 30.7929L29.935 30.7929L29.935 19.2721L18.0607 31.1464L17.3536 30.4393L29.2279 18.565Z" fill="#E0DD00"/>
         </svg>
         span ВІДВІДАТИ САЙТ
-      img(src="./assets/images/home/developer/developer2.png", alt="", srcset="").home-double-screen__developer-image
