--- a/src/assets/styles/layouts/home/home-double-screen.scss
+++ b/src/assets/styles/layouts/home/home-double-screen.scss
@@ -136,24 +136,36 @@
         }
         @include to(600px){
             &>div:nth-child(1) {
-                order: 1;
+                order: -1;
             }
             &>div:nth-child(2) {
-                order: 3;
+                order: -1;
                 
             }
             &>div:nth-child(3) {
-                order: 5;
+                order: -1;
                 
             }
-            &>img:nth-child(4) {
-                order: 3;
+            &>div:nth-child(5) {
+                order: 4;
+                
             }
-            .developer-link:nth-child(5) {
+            &>:nth-child(4) {
+                order: 4;
+                
+            }
+            .developer-link {
                 order: 6;
             }
             &>img:nth-child(6) {
                 order: 2;
+            }
+        }
+        @include to(1024px){
+            &>:nth-child(4) {
+                text-align: center;
+                display: flex;
+                justify-content: center;align-items: center;
             }
         }
 
@@ -206,6 +218,24 @@
             margin-bottom: 40px;
         }
     }
+    
+    ul {
+        margin-top: 28px;
+    }
+    li {
+        position: relative;
+        padding-left: 20px;
+        &:before {
+            content: '•';
+            position: absolute;
+            left: 0;
+            top: 0.1em;
+            height: max-content;
+        }
+    }
+    li~li {
+        margin-top: 12px;
+    }
 }
 
 .developer-link {
@@ -219,6 +249,10 @@
     justify-content: center;align-items: center;
     text-decoration: none;
     transition: .25s ease-in-out;
+    @include from(1025px){
+        width: pxWidthInVw(320);
+        height: pxWidthInVw(320);
+    }
     svg,
     span {
         transition: .25s ease-in-out;
