--- a/src/assets/styles/layouts/home/home-double-screen.scss
+++ b/src/assets/styles/layouts/home/home-double-screen.scss
@@ -66,6 +66,10 @@
                 }
             }
         }
+        svg.disable-animation {
+            width: 18px;
+            height: 18px;
+        }
     }
     &__table-link {
         color: var(--color-white);
