--- a/src/assets/styles/pages/home.scss
+++ b/src/assets/styles/pages/home.scss
@@ -363,6 +363,12 @@
     // height: 105vh;
     --text-padding: 60px;
     overflow: hidden;
+    @include from(1025px){
+        min-height: 100vh;
+        width: 100vw;
+        display: flex;
+        align-items: center;
+    }
     @include from-to(1025px, 1420px){
         --text-padding: 30px;
     }
@@ -386,6 +392,11 @@
         position: relative;
         z-index: 2;
         align-items: center;
+        @include from(1025px){
+            max-width: 100vw;
+            margin-left: -30px;
+            margin-right: 0;
+        }
         @include from-to(1025px, 1320px){
             align-items: center;
         }
@@ -645,9 +656,14 @@
 }
 
 .home-plannings {
-    --gap: 60px;
+    --gap: 30px;
     @include to(1024px){
         --gap: 20px;
+    }
+    @include from(1025px){
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
     }
     &__content {
         // gap: var(--gap);
@@ -688,6 +704,11 @@
 .home-characteristics {
     position: relative;
     overflow: hidden;
+    @include from(1025px){
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+    }
     @include from-to(601px, 1024px){
         padding-top: 210px;
         padding-bottom: 210px;
@@ -753,7 +774,7 @@
         }
         &-icon-wrap {
             // padding: 50px;
-            padding: pxWidthInVw(50);
+            padding: pxWidthInVw(40);
             flex-shrink: 0;
             @include to(1024px){
                 align-self: center;
