--- a/src/assets/styles/pages/home.scss
+++ b/src/assets/styles/pages/home.scss
@@ -397,8 +397,8 @@
             margin-left: -30px;
             margin-right: 0;
         }
-        @include from-to(1025px, 1320px){
-            align-items: center;
+        @include from(1025px){
+            align-items: flex-start;
         }
         
     }
@@ -502,7 +502,7 @@
         @include size(7);
         @include shift(0);
         @include from(1025px){
-            @include shift-padding-left(0.2);
+            // @include shift-padding-left(0.2);
             @include shift-padding-right(0.2);
         }
         @include size-md(24);
@@ -516,6 +516,9 @@
         flex-wrap: wrap;
         align-items: flex-start;
         // padding-top: 78px;
+        @include from(1025px){
+
+        }
         @include to(1024px){
             order: -1;
             text-align: center;
@@ -524,6 +527,12 @@
             margin-bottom: 40px;
             justify-content: center;
             padding-top: 0;
+        }
+        &>:first-child {
+            @include from(1025px){
+                margin-left: auto;
+                margin-right: auto;
+            }
         }
 
     }
@@ -554,8 +563,11 @@
         width: 33%;
         cursor: pointer;
         transition: .25s ease-in-out;
+        @include from(1025px){
+            padding: pxWidthInVw(20);
+        }
         @include from-to(1025px, 1441px){
-            width: 50%;
+            // width: 50%;
         }
         @include to(1024px){
             width: 164px;
@@ -571,8 +583,21 @@
             width: 68px;
             height: 68px;
             margin-bottom: 10px;
+            @include from(1025px){
+                width: pxWidthInVw(68);
+                height: pxWidthInVw(68);
+                svg {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
         }
         &-text {
+            @include from(1025px){
+                .text-style-1920-button {
+                    font-size: pxWidthInVw(14);
+                }
+            }
         }
         &.active {
             background: linear-gradient(103deg, #E0DD00 0%, #7DB928 100%);
